My changes after cloning

--- a/pretrain/preprocess.ipynb
+++ b/pretrain/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,21 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set your meta path of mimic-ecg\n",
-    "meta_path = 'your_path/mimic-iv-ecg-diagnostic-electrocardiogram-matched-subset-1.0'\n",
+    "meta_path = '/media/sumit/dd6174bf-2d05-4a68-9324-d66b0a8e63762/Aditi/physionet.org/files/mimic-iv-ecg/1.0'\n",
     "report_csv = pd.read_csv(f'{meta_path}/machine_measurements.csv', low_memory=False)\n",
     "record_csv = pd.read_csv(f'{meta_path}/record_list.csv', low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 1100.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 35)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def process_report(row):\n",
     "    # Select the relevant columns and filter out NaNs\n",
@@ -76,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 175.76it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# build an empty numpy array to store the data, we use int16 to save the space\n",
     "temp_npy = np.zeros((len(record_csv), 12, 5000), dtype=np.int16)\n",
@@ -135,27 +165,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split to train and val\n",
-    "train_npy, train_csv, val_npy, val_csv = train_test_split(temp_npy, report_csv, test_size=0.02, random_state=42)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "temp_npy = np.random.rand(100, 10)  \n",
+    "report_csv = pd.DataFrame({'col1': range(100), 'col2': range(100, 200)})  \n",
+    "\n",
+    "train_npy, val_npy, train_csv, val_csv = train_test_split(temp_npy, report_csv, test_size=0.02, random_state=42)\n",
     "\n",
     "train_csv.reset_index(drop=True, inplace=True)\n",
     "val_csv.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "# save to your path\n",
     "np.save(\"your_path_train.npy\", train_npy)\n",
     "np.save(\"your_path_val.npy\", val_npy)\n",
     "train_csv.to_csv(\"your_path_train.csv\", index=False)\n",
-    "val_csv.to_csv(\"your_path_val.csv\", index=False)"
+    "val_csv.to_csv(\"your_path_val.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chen",
+   "display_name": "aditi",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
